# ToxerUI

./: .gitignore  AddFriendView.qml  CMakeLists.txt  CreateProfile.qml  CurrentProfile.qml  FriendDelegate.qml  FriendsView.qml  LICENSE  MainViewSlim.qml  MainViewSplit.qml  MessengerDelegate.qml  MessengerView.qml  Profiles.qml  Readme.md  SelectProfile.qml  Style.qml  qml.qrc  setup-toxer.sh
animations/: Ringing.qml  qmldir
base/: MainViewBase.qml  Page.qml  View.qml
controls/: FlatButton.qml  Slider.qml  Text.qml  TextEdit.qml  TextInput.qml  qmldir
lib/: CMakeLists.txt
packaging/: .gitignore  README.md  snapcraft.yaml
qml/: CreateProfile.qml  FriendsView.qml  MainViewSplit.qml  MessageModel.qml  MessengerDelegate.qml  MessengerView.qml  SelectProfile.qml  qml.qrc
qml/animations/: Pulsing.qml  qmldir
qml/base/: Page.qml  ViewLoader.qml  qmldir
qml/controls/: FlatButton.qml  Slider.qml  TextInput.qml
qml/style/: Style.qml
res/: res.qrc
settings/: Appearance.qml  Overview.qml  qmldir
src/: main.cpp
style/: qmldir
